--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-    "require-dev": {
-        "phayes/geophp": "^1.2"
+    "autoload": {
+        "psr-4": {
+            "blog\\": "modules/blog/"
+        }
     }
 }
