--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     },
     "autoload": {
         "psr-4": {
-            "blog\\": "modules/blog/"
+            "blog\\": "modules/blog/",
+            "_assets\\config\\": "_assets/config/"
         }
     },
   "require": {
