--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "require": {
     "ext-pdo": "*",
     "ext-curl": "*",
-    "ext-zip": "*"
+    "ext-zip": "*",
+    "proj4php/proj4php": "^2.0"
   }
 }
