--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "autoload": {
         "psr-4": {
             "blog\\": "modules/blog/",
-            "_assets\\config\\": "_assets/config/"
+            "_assets\\config\\": "_assets/config/",
+          "proj4php\\": "vendor/proj4php/proj4php/src/"
         }
     },
   "require": {
