--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require-dev": {
         "phayes/geophp": "^1.2",
-        "amenadiel/jpgraph": "^4.1.1"
+        "amenadiel/jpgraph": "^4.1.1",
+        "phpunit/phpunit": "^10.5"
 
     },
     "autoload": {
