Dernier Modifications : documentation

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     "ext-pdo": "*",
     "ext-curl": "*",
     "ext-zip": "*",
-    "proj4php/proj4php": "^2.0",
-    "ext-fileinfo": "*"
+    "proj4php/proj4php": "^2.0"
   }
 }
